syntax = "proto3";

option csharp_namespace = "asagiv.datapush.server";

package dataPush;

service DataPush {
  rpc PushData (DataPushRequest) returns (DataPushResponse);
  rpc PullData (DataPullRequest) returns (DataPullResponse);
}

message DataPushRequest {
  string topic = 1;
  bytes data = 2;
}

message DataPushResponse {
  int32 confirmation = 1;
}

message DataPullRequest {
  string topic = 1;
}

message DataPullResponse {
  string topic = 1;
  bytes data = 2;
}
